--- a/index.html
+++ b/index.html
@@ -90,18 +90,25 @@
     </section>
 
     <!-- Contact Section -->
-    <section id = "contact_me" class="contact_me">
-        <h2>Contact</h2>
-        <form action="#" method="POST">
-            <label for="name">Your Name</label>
-            <input type="text" name="name" required ><br>
-            <label for="email">Your Email</label>
-            <input type="email" name="email" required><br>
-            <label for="massege">Message to me</label>
-            <textarea name="message" required></textarea>
-            <button type="submit">SEND MESSAGE</button>
-        </form>
-    </section>
+    <footer>
+        <div class="container">
+            <form >
+              <div class = "contact_form">
+                <h2>Contact us</h2><br>
+                <label for="name">Your name</label>
+                <input type="text" id="name" ><br><br>
+                <label for="email">Your email</label>
+                <input type="email" id="email" ><br><br>
+                <label for="message">Message to me</label>
+                <input type="text" id="message"><br><br>
+                 <button id="messageBtn">SEND MESSAGE</button><br><br>
+                 <p>Copyright &#9400 My Website 2025</p>
+              </div>
+            </form>  
+           
+          </div>
+     
+      </footer>
 
     <!-- Back to Top Button -->
     <button id="backToTop">Back to Top</button>
